[tool.poetry]
name = "datastruct-module"
version = "0.1.0"
description = ""
authors = ["kseniyaav <kseniyaav10@gmail.com>"]
readme = "README.md"
packages = [{include = "datastruct_module"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
